--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -181,8 +181,8 @@
   position: absolute;
   right: -2px;
   bottom: -2px;
-  width: 16.67px;
-  height: 16.67px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
   background-color: var(--background-online);
   border: 2px solid var(--surface-bg);
